k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-demo
spec:
  replicas: 1   #Start with 1 pod

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: aks-demo

  template:
    metadata:
      labels:
        app: aks-demo
    spec:
      containers:
      - name: aks-demo
        image: vkraftacr123.azurecr.io/aks-demo-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:              # REQUIRED for HPA
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
