k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-service
spec:
  type: ClusterIP
  selector:
    app: aks-demo
  ports:
    - port: 80
      targetPort: 5000
