k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-demo-ingress
  namespace: AKS-ROLL-OUT-DEMO

spec:
  ingressClassName: nginx
  rules:
  - host: myapp.vkraft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-demo-service
            port:
              number: 80
